--- a/public/skills.html
+++ b/public/skills.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>Robert Schmahl</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"><link rel="stylesheet" type="text/css" href="/assets/styles/styles.css"><link rel="stylesheet" type="text/css" href="/assets/styles/output.css"><link rel="stylesheet" type="text/css" href="/assets/styles/main.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><style>.resumeAnimation {
+<!DOCTYPE html><html lang="en"><head><title>Robert Schmahl</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"><link rel="stylesheet" type="text/css" href="/assets/styles/styles.css"><link rel="stylesheet" type="text/css" href="/assets/styles/output.css"><link rel="stylesheet" type="text/css" href="/assets/styles/main.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/assets/script.js"></script><style>.resumeAnimation {
     position: relative;
     overflow: hidden;
     width: 25%;
@@ -23,141 +23,4 @@
 
 @keyframes slide {
     100% { left: -2%; }
-}</style></head><body><main class="wrapper flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-auto w-auto p-10" id="page_style"><div class="page_description flex flex-col"><nav class="flex flex-wrap content-start mt-20 mx-auto"><a class="homeLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg active" href="./index.html" type="button">Home</a><a class="projectsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./projects.html" type="button">Projects</a><a class="skillsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./skills.html" type="button">Skills</a><a class="aboutLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./about.html" type="button">About</a><a class="contactLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./contact.html" type="button">Contact</a></nav><a class="resumeDwnload flex flex-wrap resumeLink bg-gray-100 rounded-lg py-5 px-3 undefined" href="../assets/downloads/2020-Resume-RobertSchmahl.pdf" download="2020-Resume-RobertSchmahl.pdf" id="resumeAnimation"><i class="fa fa-download fa-2x" style="color: Mediumslateblue;"></i><p class="flex-wrap text-lg text-indigo-800 ml-2">Download my resume</p><span class="flex items-center text-sm italic text-indigo-800"> &nbsp;(pdf 110kb)</span></a><div class="skills flex flex-wrap mt-20 ml-32 mr-32"><div class="skillCard flex-shrink text-center justify-center bg-gray-100 mx-auto p-10 rounded-lg"><i class="fas fa-cogs fa-3x text-pink-800 font-semibold mt-4"></i><h2 class="text-2xl font-bold mt-4 p-2">Developer</h2><p class="mt-2 p-2">I am a full-stack web developer, able to tackle projects from front-end to back-end.</p><h3 class="text-xl text-pink-800 font-semibold mt-4 p-3">Dev Tools & Languages:</h3><dl><dt> HTML/Pug</dt><dt> CSS/Sass</dt><dt> Javascript</dt><dt> Bootstrap</dt><dt> Tailwindcss</dt><dt> Node</dt><dt> Visual Studio Code</dt><dt> Github</dt><dt> Terminal</dt></dl></div><div class="skillCard flex-shrink text-center justify-center bg-gray-100 mx-auto p-10 rounded-lg"><i class="fas fa-pencil-ruler fa-3x text-pink-800 font-semibold mt-4"></i><h2 class="text-2xl font-bold mt-4 p-2">Designer</h2><p class="mt-2 p-2">I strive to create elegant designs that create impactful user interactions.</p><h3 class="text-xl text-pink-800 font-semibold mt-4 p-3">Things I love to design:</h3><dl><dt>UX, UI</dt><dt>Logos</dt><dt>Posters</dt><dt>Social Media Images</dt><dt>Web</dt><dt>Mobile</dt><dt>Apps</dt><dt>Storefronts</dt></dl></div><div class="skillCard flex-shrink text-center justify-center bg-gray-100 mx-auto p-10 rounded-lg"><i class="fas fa-users fa-3x text-pink-800 font-semibold mt-4"></i><h2 class="text-2xl font-bold mt-4 p-2">Collaborator</h2><p class="mt-2 p-2">I love working in teams, and I draw upon diverse experiences to inform my collaborating.</p><h3 class="text-xl text-pink-800 font-semibold mt-4 p-3">Experiences I draw from:</h3><dl><dt>2+ years government experience</dt><dt>3+ years web development</dt><dt>4+ years graphic design</dt><dt>4+ years small business owner</dt><dt>4+ years event coordination</dt><dt>4+ years web design</dt><dt>6+ years photography</dt><dt>8+ years customer service</dt></dl></div></div></div></main></body><script>// defining a nav constant to append after typewriter function
-const nav = `<nav class='flex flex-wrap content-start mt-20 mx-auto'>
-<a href='./index.html' class="btn_nav fadeIn homeLink text-xl mx-5 px-4 py-3 rounded-lg active" type="button">Home</a>
-<a href='./projects.html' class="btn_nav fadeIn projectsLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Projects</a>
-<a href='./skills.html' class="btn_nav fadeIn skillsLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Skills</a>
-<a href='./about.html' class="btn_nav fadeIn aboutLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">About</a>
-<a href='./contact.html' class="btn_nav fadeIn contactLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Contact</a>
-</nav>
-`;
-
-$(document).ready(function () {
-// defining typewrite function
-(function ($) {
-    $.fn.typewrite = function (options) {
-    const settings = {
-        selector: this,
-        extra_char: "",
-        delay: 50,
-        trim: false,
-        callback: true,
-    };
-    if (options) $.extend(settings, options);
-
-    /* This extra closure makes it so each element
-    * matched by the selector runs sequentially, instead
-    * of all at the same time. */
-    function type_next_element(index) {
-        let current_element = $(settings.selector[index]);
-        let final_text = current_element.text();
-        if (settings.trim) final_text = $.trim(final_text);
-        // reveal letters as they are typed
-        current_element.html("").addClass("visible").removeClass("invisible");
-
-        function type_next_character(element, i) {
-        element.html(final_text.substr(0, i) + settings.extra_char);
-        if (final_text.length >= i) {
-            setTimeout(function () {
-            type_next_character(element, i + 1);
-            }, settings.delay);
-        } else {
-            if (++index < settings.selector.length) {
-            type_next_element(index);
-            } else if (settings.callback) settings.callback();
-        }
-        }
-        type_next_character(current_element, 0);
-    }
-    type_next_element(0);
-    return this;
-    };
-})(jQuery);
-
-// define pageRender function for animation
-function pageRender() {
-    // animate content
-    $("#page_style").addClass("animate_content");
-    $(".page_description").fadeOut(100).delay(2800).fadeIn();
-
-    setTimeout(function () {
-    // set page_description as invisible
-    $(".page_description").addClass("invisible");
-    }, 2800);
-
-    setTimeout(function () {
-    // end animation
-    $("#page_style").removeClass("animate_content");
-    $(".page_description").addClass("visible").removeClass("invisible");
-    }, 3200);
-
-    //remove fadeIn class after 1500ms
-    setTimeout(function () {
-    $("#page_style").removeClass("fadeIn");
-    }, 1500);
-}
-
-// calling typewriter callback
-$(".typewriter").typewrite({
-    // on callback, insert button under text
-    callback: function () {
-    $(".introduction").append(nav);
-    },
-});
-
-// add animation function
-$(document).on("click", ".btn_nav", function () {
-    // grab the value of the button
-    let btnTxt = $(this).text();
-    // properties for projects page
-    if (btnTxt == "Projects") {
-    pageRender();
-
-    setTimeout(function () {
-        $(".btn_nav").removeClass("active");
-        $(".projectsLink").addClass("active");
-    }, 3200);
-    }
-
-    // properties for skills page
-    if (btnTxt == "Skills") {
-    pageRender();
-
-    setTimeout(function () {
-        $(".btn_nav").removeClass("active");
-        $(".skillsLink").addClass("active");
-    }, 3200);
-    }
-
-    // properties for home page
-    if (btnTxt == "Home") {
-    pageRender();
-
-    setTimeout(function () {
-        $(".btn_nav").removeClass("active");
-        $(".homeLink").addClass("active");
-    }, 3200);
-    }
-
-    // properties for about page
-    if (btnTxt == "About") {
-    pageRender();
-
-    setTimeout(function () {
-        $(".btn_nav").removeClass("active");
-        $(".aboutLink").addClass("active");
-    }, 3200);
-    }
-
-    // properties for contact page
-    if (btnTxt == "Contact") {
-    pageRender();
-
-    setTimeout(function () {
-        $(".btn_nav").removeClass("active");
-        $(".contactLink").addClass("active");
-    }, 3200);
-    }
-});
-});</script></html>
+}</style></head><body><main class="wrapper flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-auto w-auto p-10" id="page_style"><div class="page_description flex flex-col"><nav class="flex flex-wrap content-start mt-20 mx-auto"><a class="homeLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg active" href="./index.html" type="button">Home</a><a class="projectsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./projects.html" type="button">Projects</a><a class="skillsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./skills.html" type="button">Skills</a><a class="aboutLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./about.html" type="button">About</a><a class="contactLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./contact.html" type="button">Contact</a></nav><a class="resumeDwnload flex flex-wrap resumeLink bg-gray-100 rounded-lg py-5 px-3 undefined" href="../assets/downloads/2020-Resume-RobertSchmahl.pdf" download="2020-Resume-RobertSchmahl.pdf" id="resumeAnimation"><i class="fa fa-download fa-2x" style="color: Mediumslateblue;"></i><p class="flex-wrap text-lg text-indigo-800 ml-2">Download my resume</p><span class="flex items-center text-sm italic text-indigo-800"> &nbsp;(pdf 110kb)</span></a><div class="skills flex flex-wrap mt-20 ml-32 mr-32"><div class="skillCard flex-shrink text-center justify-center bg-gray-100 mx-auto p-10 rounded-lg"><i class="fas fa-cogs fa-3x text-pink-800 font-semibold mt-4"></i><h2 class="text-2xl font-bold mt-4 p-2">Developer</h2><p class="mt-2 p-2">I am a full-stack web developer, able to tackle projects from front-end to back-end.</p><h3 class="text-xl text-pink-800 font-semibold mt-4 p-3">Dev Tools & Languages:</h3><dl><dt> HTML/Pug</dt><dt> CSS/Sass</dt><dt> Javascript</dt><dt> Bootstrap</dt><dt> Tailwindcss</dt><dt> Node</dt><dt> Visual Studio Code</dt><dt> Github</dt><dt> Terminal</dt></dl></div><div class="skillCard flex-shrink text-center justify-center bg-gray-100 mx-auto p-10 rounded-lg"><i class="fas fa-pencil-ruler fa-3x text-pink-800 font-semibold mt-4"></i><h2 class="text-2xl font-bold mt-4 p-2">Designer</h2><p class="mt-2 p-2">I strive to create elegant designs that create impactful user interactions.</p><h3 class="text-xl text-pink-800 font-semibold mt-4 p-3">Things I love to design:</h3><dl><dt>UX, UI</dt><dt>Logos</dt><dt>Posters</dt><dt>Social Media Images</dt><dt>Web</dt><dt>Mobile</dt><dt>Apps</dt><dt>Storefronts</dt></dl></div><div class="skillCard flex-shrink text-center justify-center bg-gray-100 mx-auto p-10 rounded-lg"><i class="fas fa-users fa-3x text-pink-800 font-semibold mt-4"></i><h2 class="text-2xl font-bold mt-4 p-2">Collaborator</h2><p class="mt-2 p-2">I love working in teams, and I draw upon diverse experiences to inform my collaborating.</p><h3 class="text-xl text-pink-800 font-semibold mt-4 p-3">Experiences I draw from:</h3><dl><dt>2+ years government experience</dt><dt>3+ years web development</dt><dt>4+ years graphic design</dt><dt>4+ years small business owner</dt><dt>4+ years event coordination</dt><dt>4+ years web design</dt><dt>6+ years photography</dt><dt>8+ years customer service</dt></dl></div></div></div></main></body></html>
